align menu changes

--- a/scss/_megamenu.scss
+++ b/scss/_megamenu.scss
@@ -65,9 +65,9 @@
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item{
   padding: 0;
   &:last-child{
-    float: right;
+    //float: right;
   }
 }
 #mega-menu-item-420{
-	float: right !important; 
+	float: right !important;
 }
