--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,10 +8,11 @@ Text Domain: twentysixteen-child
 
 */
 @import "base/variables";
+@import "vendor/bootstrap/bootstrap/variables";
 @import "vendor/bootstrap/bootstrap";
 @import "base/reset";
 @import "base/shortcodes";
-@import "base/typography"; 
+@import "base/typography";
 @import "layout/gallery";
 @import "layout/header";
 @import "layout/footer";
