--- a/css/style.css
+++ b/css/style.css
@@ -6347,8 +6347,10 @@ dd {
 figcaption {
   text-align: left; }
 
-.site-branding .site-title img {
-  width: 14rem; }
+.site-branding {
+  text-align: center; }
+  .site-branding .site-title img {
+    width: 14rem; }
 
 .site-header-main {
   display: block; }
