--- a/scss/_megamenu.scss
+++ b/scss/_megamenu.scss
@@ -50,10 +50,12 @@
 
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-item ul.mega-sub-menu {
   padding: 15px 30px 15px 15px;
+  column-count: 2;
 }
 
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-item li.mega-menu-item > a.mega-menu-link {
   line-height: 18px;
+  display: none;
 }
 #mega-menu-wrap-primary .mega-menu-toggle{
   background-color: transparent;
