add two and tree cols classes for menu

--- a/scss/style.css
+++ b/scss/style.css
@@ -6486,7 +6486,8 @@ footer#footer {
   padding: 0; }
   @media (min-width: 768px) {
     #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-item > a.mega-menu-link {
-      padding: 5px; } }
+      padding: 5px;
+      display: none; } }
 
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item.mega-toggle-on > a.mega-menu-link, #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:hover, #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:focus {
   color: #9fb224; }
@@ -6498,6 +6499,14 @@ footer#footer {
 
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-item ul.mega-sub-menu {
   padding: 15px 30px 15px 15px; }
+
+#mega-menu-wrap-primary #mega-menu-primary > li.mega-two-cols.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-item ul.mega-sub-menu {
+  -webkit-column-count: 2;
+  column-count: 2; }
+
+#mega-menu-wrap-primary #mega-menu-primary > li.mega-three-cols.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-item ul.mega-sub-menu {
+  -webkit-column-count: 3;
+  column-count: 3; }
 
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-item li.mega-menu-item > a.mega-menu-link {
   line-height: 18px; }
