--- a/scss/layout/_megamenu.scss
+++ b/scss/layout/_megamenu.scss
@@ -39,6 +39,7 @@
   padding: 0;
   @media (min-width: $screen-sm-min) {
     padding:5px;
+    display: none;
   }
 }
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item.mega-toggle-on > a.mega-menu-link, #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:hover, #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:focus {
@@ -53,6 +54,13 @@
 }
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-item ul.mega-sub-menu {
   padding: 15px 30px 15px 15px;
+}
+
+#mega-menu-wrap-primary #mega-menu-primary > li.mega-two-cols.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-item ul.mega-sub-menu {
+  column-count: 2;
+}
+#mega-menu-wrap-primary #mega-menu-primary > li.mega-three-cols.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-item ul.mega-sub-menu {
+  column-count: 3;
 }
 
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-item li.mega-menu-item > a.mega-menu-link {
