--- a/scss/layout/_megamenu.scss
+++ b/scss/layout/_megamenu.scss
@@ -39,6 +39,7 @@
   padding: 0;
   @media (min-width: $screen-sm-min) {
     padding:5px;
+    text-align: center;
   }
 }
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item.mega-toggle-on > a.mega-menu-link, #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:hover, #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:focus {
