header menu design changes gray background color change

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,4 +1,5 @@
 //$color-theme:#F5A623;
 //$color-theme:#b1c23d;
 $color-theme:#9fb224;
-$footer-color:#4B4B4B; 
+$footer-color:#4B4B4B;
+$gray-background:#F7F7F7;
