--- a/scss/layout/_megamenu.scss
+++ b/scss/layout/_megamenu.scss
@@ -13,7 +13,6 @@
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:focus,
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item.mega-toggle-on > a.mega-menu-link {
   text-transform: uppercase;
-  font-weight: bold;
   @media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
   	font-size: 12px;
   }
@@ -76,6 +75,7 @@
   padding: 0;
     &:last-child{
     	@media (min-width: $screen-md-min) {
+        padding: 0 15px;
   		//float: right;
   	}
   }
