--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,5 +1,3 @@
-//$color-theme:#F5A623;
-//$color-theme:#b1c23d;
-$color-theme:#9fb224;
-$footer-color:#4B4B4B;
+$color-theme:#0087CC;
+$footer-color:#004162;
 $gray-background:#F7F7F7;
