--- a/scss/style.css
+++ b/scss/style.css
@@ -6363,7 +6363,10 @@ figcaption {
 
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
-  width: 100%; }
+  width: auto;
+  height: calc(100vh - 220px);
+  max-width: none;
+  margin: 0 auto; }
 
 .site-header-menu {
   display: block; }
