--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -52,18 +52,15 @@ h6 {
   margin-top: 1rem;
   margin-bottom: 0;
   font-size: 1.5rem;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Railway", "Helvetica", "Arial", sans-serif;
   font-weight: 300;
   line-height: 1.5em;
-
 }
 a:hover{
 	h1,h2,h3,h4,h5,h6{
 		color:$color-theme;
 	}
 }
-
-
 .post-navigation a:hover .post-title, .post-navigation a:focus .post-title{
 		color:$color-theme;
 		text-decoration:none;
