--- a/scss/style.css
+++ b/scss/style.css
@@ -6237,7 +6237,7 @@ h6 {
   margin-top: 1rem;
   margin-bottom: 0;
   font-size: 1.5rem;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Railway", "Helvetica", "Arial", sans-serif;
   font-weight: 300;
   line-height: 1.5em; }
 
