--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -52,7 +52,7 @@ h6 {
   margin-top: 1rem;
   margin-bottom: 0;
   font-size: 1.5rem;
-  font-family: "Railway", "Helvetica", "Arial", sans-serif;
+  font-family: "Raleway", "Helvetica", "Arial", sans-serif;
   font-weight: 300;
   line-height: 1.5em;
 }
