--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -16,8 +16,8 @@
   margin: 0;
 }
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-    width: auto;
-    height: calc(100vh - 220px);
+    width: 100%;
+    height: auto;
     max-width: none;
     margin: 0 auto;
   }
