--- a/scss/style.css
+++ b/scss/style.css
@@ -6363,8 +6363,8 @@ figcaption {
 
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
-  width: auto;
-  height: calc(100vh - 220px);
+  width: 100%;
+  height: auto;
   max-width: none;
   margin: 0 auto; }
 
