change breakpoint to md for frontpage content

--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -1,5 +1,5 @@
 #carousel-accueil{
-  @media (min-width: $screen-sm-min) {
+  @media (min-width: $screen-md-min) {
     margin-bottom: -100px;
   }
 }
