--- a/scss/style.css
+++ b/scss/style.css
@@ -6448,9 +6448,11 @@ footer#footer {
 
 #mega-menu-wrap-primary #mega-menu-primary {
   text-align: left;
-  padding: 0; }
+  padding: 0;
+  background-color: #F7F7F7 !important; }
   @media (min-width: 992px) {
     #mega-menu-wrap-primary #mega-menu-primary {
+      background-color: transparent !important;
       margin-left: 100px; } }
 
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link,
@@ -6492,12 +6494,12 @@ footer#footer {
       padding: 5px; } }
 
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item.mega-toggle-on > a.mega-menu-link, #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:hover, #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:focus {
-  color: #0087CC; }
+  color: #0087CC;
+  background-color: #eaeaea; }
 
 @media (min-width: 768px) {
   #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-megamenu > ul.mega-sub-menu {
-    padding: 25px 50px;
-    margin-top: 10px; } }
+    padding: 25px 50px; } }
 
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-item ul.mega-sub-menu {
   padding: 15px 30px 15px 15px; }
