change menu background color

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,4 +1,5 @@
 $color-theme:#0087CC;
 $footer-color:#004162;
 $gray-background:#F7F7F7;
+$gray-background-dark:#dddddd;
 $gray-background-active:#eaeaea;
