--- a/scss/layout/_megamenu.scss
+++ b/scss/layout/_megamenu.scss
@@ -2,7 +2,7 @@
 #mega-menu-wrap-primary #mega-menu-primary {
   text-align: left;
   padding: 0;
-  background-color: $gray-background !important;
+  background-color: $gray-background-dark !important;
   @media (min-width: $screen-md-min) {
     background-color: transparent !important;
     margin-left: 100px;
