Use the get_excerpt function

--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -1,12 +1,12 @@
 #carousel-accueil{
   @media (min-width: $screen-md-min) {
-    margin-bottom: -80px;
+    margin-bottom: -70px;
   }
 }
 .homepage-content{
   h2,
   .widget h2.widget-title {
-    margin: 10px 0;
+    margin: 10px 0 40px;
   }
   .homepage-thumb{
     padding: 10px 0;
