add display flex for the same height

--- a/scss/style.css
+++ b/scss/style.css
@@ -6589,7 +6589,10 @@ footer#footer {
     margin-bottom: -70px; } }
 
 .homepage-content__actus-pilier {
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
   .homepage-content__actus-pilier .site-main {
     height: 100%; }
 
