--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -66,9 +66,15 @@
   .entry>.p1:first-child{
     margin-bottom: 20px;
   }
-}
+} 
 .post-list{
 	img{
 		padding:5px 0;
 	}
+}
+.liens_utiles{
+  display: flex;
+  &-item{
+    display: grid;
+  }
 }
