change white to white for testing

--- a/css/style.css
+++ b/css/style.css
@@ -6626,7 +6626,7 @@ footer#footer {
   .site-presentation a,
   .site-presentation a:hover,
   .site-presentation p {
-    color: #fff; }
+    color: #ffffff; }
   .site-presentation .homepage-thumb {
     margin: 10px -24px; }
     .site-presentation .homepage-thumb img {
