--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -75,8 +75,17 @@
 
 .liens_utiles{
   display: flex;
-  color: #fff;
+  justify-content: center;
   &-item{
     display: grid;
+    text-align: center;
+    padding: 20px;
+    margin: 10px;
+    background-color: #fff;
+    img{
+      margin: 0 auto;
+      width: 80px;
+      padding: 10px;
+    }
   }
 }
