--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -11,6 +11,9 @@
       height: 100%;
     }
   }
+  .site-main{
+    position: relative;
+  }
   h2,
   .widget h2.widget-title {
     margin: 10px 0 40px;
@@ -26,6 +29,8 @@
     display: block;
     font-size: 14px;
     font-weight: bold;
+    position: absolute;
+    bottom: 0;
     &:hover{
       background-color: rgba(200,200,200,0.3);
       text-decoration: none;
