--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -13,6 +13,7 @@
   }
   .site-main{
     position: relative;
+    padding-bottom: 4rem;
   }
   h2,
   .widget h2.widget-title {
@@ -24,13 +25,14 @@
   a.more-articles{
     white-space: nowrap;
     background-color: rgba(200,200,200,0.2);
-    padding: 1rem 1.5rem;
-    margin: 0 -1.5rem -1rem;
+    padding: 1rem;
+    margin: 0 -1rem;
     display: block;
     font-size: 14px;
     font-weight: bold;
     position: absolute;
-    bottom: 0;
+    bottom: 1rem;
+    width:calc(100% - 2rem);
     &:hover{
       background-color: rgba(200,200,200,0.3);
       text-decoration: none;
