--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -89,9 +89,10 @@
     padding: 20px;
     margin: 10px;
     background-color: #fff;
+    width: calc(100% / 6);
     img{
       margin: 0 auto;
-      width: 80px;
+      height: 64px;
       padding: 10px;
     }
   }
