--- a/scss/style.css
+++ b/scss/style.css
@@ -6252,49 +6252,18 @@ a:hover h1, a:hover h2, a:hover h3, a:hover h4, a:hover h5, a:hover h6 {
     text-decoration: none;
     border: 0; }
 
-.entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4, .entry-content h5, .entry-content h6, .entry-summary h1, .entry-summary h2, .entry-summary h3, .entry-summary h4, .entry-summary h5, .entry-summary h6, .comment-content h1, .comment-content h2, .comment-content h3, .comment-content h4, .comment-content h5, .comment-content h6, .textwidget h1, .textwidget h2, .textwidget h3, .textwidget h4, .textwidget h5, .textwidget h6 {
-  font-weight: 300; }
-
 h1,
 h1.entry-title {
-  font-size: 1.5rem;
-  font-weight: 500;
-  line-height: 3rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  text-transform: uppercase; }
+  font-size: 1.5rem; }
 
-.homepage-content h2,
-.homepage-content .widget h2.widget-title,
-.homepage-content .widget h2 {
-  font-size: 1.5rem;
-  line-height: 2rem;
-  margin-top: 1rem;
-  text-transform: uppercase; }
+h2 {
+  font-size: 1.2rem; }
 
-.homepage-content .entry-content h3,
-.homepage-content h3 {
-  font-size: 1rem;
-  text-transform: none; }
-
-h2,
-.widget h2.widget-title,
-.widget h2 {
-  font-size: 1rem;
-  line-height: 1.4rem;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 1rem; }
-
-.entry-content h3,
 h3 {
-  font-size: 1.2rem;
-  font-weight: 700; }
+  font-size: 1.1rem; }
 
 h4 {
-  font-size: 1rem;
-  color: #0087CC;
-  font-weight: 700; }
+  font-size: 1rem; }
 
 h5 {
   font-size: 0.9rem; }
