--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -76,9 +76,11 @@ h1.entry-title {
 }
 h2{
     font-size: 1.2rem;
+    text-transform: uppercase;
 }
 h3 {
-  font-size: 1.1rem;
+  font-size: 0.8rem;
+  font-weight: bold;
 }
 h4 {
     font-size: 1rem;
