--- a/scss/style.css
+++ b/scss/style.css
@@ -6257,10 +6257,12 @@ h1.entry-title {
   font-size: 1.5rem; }
 
 h2 {
-  font-size: 1.2rem; }
+  font-size: 1.2rem;
+  text-transform: uppercase; }
 
 h3 {
-  font-size: 1.1rem; }
+  font-size: 0.8rem;
+  font-weight: bold; }
 
 h4 {
   font-size: 1rem; }
