--- a/scss/style.css
+++ b/scss/style.css
@@ -6260,6 +6260,9 @@ h2 {
   font-size: 1.2rem;
   text-transform: uppercase; }
 
+.homepage-content h2, .homepage-content .widget h2.widget-title {
+  margin: 1rem 0 0; }
+
 h3 {
   font-size: 0.8rem;
   font-weight: bold; }
@@ -6576,8 +6579,7 @@ footer#footer {
   position: relative;
   padding-bottom: 4rem; }
 
-.homepage-content h2,
-.homepage-content .widget h2.widget-title {
+.homepage-content h2, .homepage-content .widget h2.widget-title {
   margin: 10px 0 40px; }
 
 .homepage-content .homepage-thumb {
