--- a/scss/style.css
+++ b/scss/style.css
@@ -6265,7 +6265,8 @@ h2 {
 
 h3 {
   font-size: 0.8rem;
-  font-weight: bold; }
+  font-weight: 700;
+  color: #0087CC; }
 
 h4 {
   font-size: 1rem; }
