--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -12,8 +12,8 @@ html,body {
   font-size: 0.9rem;
 }
 p {
-  font-size: 0.8rem;
-  line-height: 1.4rem;
+  font-size: 0.9rem;
+  line-height: 1.5rem;
   margin-top: 1em;
   margin-bottom: 0;
 }
@@ -73,6 +73,7 @@ a:hover{
 h1,
 h1.entry-title {
   font-size: 1.5rem;
+  margin: 2rem;
 }
 h2{
     font-size: 1.2rem;
@@ -82,7 +83,7 @@ h2{
     margin: 1rem 0 0 !important;
 }
 h3 {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   font-weight: 700;
 	color:$color-theme;
 }
