--- a/scss/style.css
+++ b/scss/style.css
@@ -6197,8 +6197,8 @@ html, body {
   font-size: 0.9rem; }
 
 p {
-  font-size: 0.8rem;
-  line-height: 1.4rem;
+  font-size: 0.9rem;
+  line-height: 1.5rem;
   margin-top: 1em;
   margin-bottom: 0; }
 
@@ -6254,7 +6254,8 @@ a:hover h1, a:hover h2, a:hover h3, a:hover h4, a:hover h5, a:hover h6 {
 
 h1,
 h1.entry-title {
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  margin: 2rem; }
 
 h2 {
   font-size: 1.2rem;
@@ -6264,7 +6265,7 @@ h2 {
   margin: 1rem 0 0 !important; }
 
 h3 {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   font-weight: 700;
   color: #0087CC; }
 
