change line height for widget list

--- a/scss/style.css
+++ b/scss/style.css
@@ -6242,6 +6242,9 @@ h6 {
   line-height: 1.5em;
   letter-spacing: 1px; }
 
+.widget ul li {
+  line-height: inherit; }
+
 a:hover h1, a:hover h2, a:hover h3, a:hover h4, a:hover h5, a:hover h6 {
   color: #0087CC; }
 
