--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -57,6 +57,9 @@ h6 {
   line-height: 1.5em;
   letter-spacing: 1px;
 }
+.widget ul li{
+  line-height: inherit;
+}
 a:hover{
 	h1,h2,h3,h4,h5,h6{
 		color:$color-theme;
