make li line height important

--- a/scss/style.css
+++ b/scss/style.css
@@ -6243,7 +6243,7 @@ h6 {
   letter-spacing: 1px; }
 
 .widget ul li {
-  line-height: inherit; }
+  line-height: inherit !important; }
 
 a:hover h1, a:hover h2, a:hover h3, a:hover h4, a:hover h5, a:hover h6 {
   color: #0087CC; }
