--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -58,7 +58,7 @@ h6 {
   letter-spacing: 1px;
 }
 .widget ul li{
-  line-height: inherit;
+  line-height: inherit !important; 
 }
 a:hover{
 	h1,h2,h3,h4,h5,h6{
