and make it important

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -58,7 +58,7 @@ h6 {
   letter-spacing: 1px;
 }
 .widget{
-  font-size: 0.9rem;
+  font-size: 0.9rem !important;
   ul li{
     line-height: inherit !important;
   }
