--- a/scss/style.css
+++ b/scss/style.css
@@ -6243,7 +6243,7 @@ h6 {
   letter-spacing: 1px; }
 
 .widget {
-  font-size: 0.9rem; }
+  font-size: 0.9rem !important; }
   .widget ul li {
     line-height: inherit !important; }
 
