--- a/scss/style.css
+++ b/scss/style.css
@@ -6443,13 +6443,8 @@ footer#footer {
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:hover,
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:focus,
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item.mega-toggle-on > a.mega-menu-link {
-  text-transform: uppercase; }
-  @media (min-width: 992px) and (max-width: 1199px) {
-    #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link,
-    #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:hover,
-    #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a.mega-menu-link:focus,
-    #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item.mega-toggle-on > a.mega-menu-link {
-      font-size: 12px; } }
+  text-transform: uppercase;
+  font-size: 0.9rem; }
 
 #mega-menu-wrap-primary,
 #mega-menu-wrap-primary #mega-menu-primary,
