--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -7,7 +7,10 @@
   &-white{
     background-color: #fff;
     padding: 50px 0;
-    margin: 40px 0 50px;
+    margin: 0 0 50px;
+  }
+  &-gray{
+    margin: 0 0 40px;
   }
   &__admin{
     margin-bottom: 50px
