--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -72,8 +72,14 @@
   &-item{
     display: grid;
     text-align: center;
-    padding: 10px;
     width: calc(100% / 6);
+    a{
+      padding: 10px;
+      text-decoration: none;
+      &:hover{
+        background-color: #fff;
+      }
+    }
     img{
       margin: 0 auto;
       height: 64px;
