--- a/scss/style.css
+++ b/scss/style.css
@@ -6631,8 +6631,12 @@ footer#footer {
     display: -ms-grid;
     display: grid;
     text-align: center;
-    padding: 10px;
     width: calc(100% / 6); }
+    .liens_utiles-item a {
+      padding: 10px;
+      text-decoration: none; }
+      .liens_utiles-item a:hover {
+        background-color: #fff; }
     .liens_utiles-item img {
       margin: 0 auto;
       height: 64px;
